<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UHF Manager</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Common -->
    <string name="common_setting">Programming...</string>
    <string name="common_confirm">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_onning">Processing...</string>
    <string name="success">succeeded</string>
    <string name="failed">failed</string>
    <string name="common_tip">Tip</string>
    <string name="common_no">No</string>

    <!-- 设置主界面 -->
    <string name="power_on">UHF Module On</string>
    <string name="power_oning">Powering on the module...</string>
    <string name="power_on_summary">Turn on &#038; initialize UHF module</string>
    <string name="inventory_demo">Inventory Demo</string>
    <string name="read_write_lock">Access Control</string>
    <string name="read_write_lock_summary">Control Read/Write, Lock and Kill operations</string>
    <string name="firmware_upgrade">Firmware Upgrade</string>
    <string name="uhf_settings">UHF Settings</string>
    <string name="trigger_mode">Inventory Trigger</string>
    <string name="trigger_mode_main">SCAN key</string>
    <string name="trigger_mode_side">Left/Right SCAN key</string>
    <string name="trigger_mode_back">Trigger on pistol grip</string>
    <string name="scan_prompt">Inventory Notification</string>
    <string name="scan_prompt_sound">Sound</string>
    <string name="scan_prompt_vibrator">Vibration</string>
    <string name="scan_prompt_led">LED</string>

    <string name="start_inventory">Start Inventory</string>
    <string name="find_device">Find Device</string>


    <!-- 盘点测试 -->
    <string name="tab2_layout_textView1">Tag Count in Current Round:</string>
    <string name="tab2_layout_textView2">   Tag Count in All Rounds:</string>
    <string name="tab2_layout_textView3">   All times of tags:</string>
    <string name="press_again_to_exit"> Press it again to exit</string>
    <string name="inventory_count">Inventory Count</string>
    <string name="inventory_period">Time of inventory : </string>
    <string name="reload_module">Reload New Module</string>

    <string name="reload_module_summary">Click here when current module is changed</string>
    <string name="reload_module_promt">Confirm to reload new module?</string>
    <string name="restore_default">Restore to default</string>

    <string name="restore_default_promt">Comfirm to restore :\n<ul><li>"\tCommon settings"</li>\n<li>"\tUHF settings"</li></ul>\n\nto default?</string>
    <string name="power_off_prompt">Do power off ?</string>

    <string name="reset_factory">Reset reader to factory</string>
    <string name="factory_promt">Confirm to reset to factory?</string>

    <string name="do_power_down">Power off</string>
    <string name="loading_uhf_module">Loading module...</string>

    <string name="uhf_module_unavailable">UHF device not detected, verify that UHF module exists and install correctly.</string>
    <string name="common_exit">Exit</string>
    <string name="search_again">Reload</string>
    <string name="power_on_failed_prompt">Power failure, please unplug the UHF module again.</string>

    <string name="power_on_success">Power success.</string>


    <string name="scan_connect">Scan and Connect</string>
    <string name="scan_connect_summary">Scan the barcode to connect a BLE device</string>
    <string name="scan_connect_go">Enter Scan Interface</string>
    <string name="scan_connect_dialog">the device is connecting...</string>
    <string name="scan_connect_tips">
        1.Open the Bluetooth-UHF device,scan the its barcode by PDA, if connect successfully, it will jump to a new interface.\n
        2.If failed, try these operations:\n
        \t\tA.If only the bluetooth LED is on, press the P button once, and the bluetooth LED will be flashing, then the device can be connected.\n
        \t\tB.If both the buletooth LED and battery LED are on, give a long press to the P button until the Bluetooth begin flash, then the device can be connected. </string>

    <string-array name="inventory_table_header">
        <item>No.</item>
        <item>EPC ID</item>
        <item>Read Count</item>
        <item>Antenna</item>
        <item>Protocol</item>
        <item>RSSI</item>
        <item>Frequency</item>
        <item>Custom Data</item>
    </string-array>



    <string name="title">Scan</string>
    <string name="scan_tip">Place the code within the frame</string>
    <string name="no_code_tip">No code detected.</string>
    <string name="confirm">OK</string>
    <string name="light">Touch for more light</string>
    <string name="light_off">Turn off light</string>
    <string name="default_view_decoe">Default View Mode</string>
    <string name="photo_decode">Decode Photo</string>
    <string name="customized_view_decode">Customized View Mode</string>
    <string name="bitmap_api_decode">Bitmap Mode</string>
    <string name="multiProcessor_api_syn_decode">MultiProcessor API Synchronous Mode</string>
    <string name="multiProcessor_api_asyn_decode">MultiProcessor API Asynchronous Mode</string>
    <string name="generate_QR_code">Generate QR Code</string>
    <string name="barcode_width">Barcode width:</string>
    <string name="barcode_height">Barcode height:</string>
    <string name="barcode_type">Type:</string>
    <string name="barcode_color">Color:</string>
    <string name="barcode_backgroundcolor">Background:</string>
    <string name="barcode_margin">Margin:</string>
    <string name="width_value">700</string>
    <string name="height_value">700</string>
    <string name="generate_barcode">Generate Barcode</string>
    <string name="save_barcode">Save Barcode</string>
    <string name="barcode_content">Barcode Content:</string>
    <string name="content_detail">HUAWEI Scan Kit scans and parses all major 1D and 2D barcodes, helping you quickly build barcode scanning functions into your apps.</string>
    <string name="content_detailb">MultiCodeDecoder：Decode Multi Codes</string>
    <string name="title_result">Result</string>
    <string name="code_format">Code Format</string>
    <string name="result_type">Result Type</string>
    <string name="result_content">Result</string>
    <string name="copy">Copy</string>
    <string name="add_contact">Add Contact</string>
    <string name="connect_network">Connet to network</string>
    <string name="add_calendar">Add to calendar</string>
    <string name="send_sms">Send SMS</string>
    <string name="call">Call</string>
    <string name="nivigation">Nivigation</string>
    <string name="send_email">Send Email</string>
    <string name="copy_toast">Content has been copied</string>
    <string name="open_browser">Open in browser</string>
    <string name="mwc_title">HMS Core Scan Kit Demo</string>
    <string name="mwc_subject">About Scan Kit</string>
    <string name="mwc_detail">An in-app scanner for 1D and 2D barcodes connects your app to real-world scenarios and helps you build powerful code scanning capabilities with a minimum of 5 lines of code.</string>
    <string name="scan_showresult">Scan results will show on screen</string>




    <string name="start_read">Start read</string>
    <string name="stop_read">Stop read</string>
    <string name="clear_data">Clear data</string>
    <string name="save_json">Save json</string>

</resources>